--- a/body.tex
+++ b/body.tex
@@ -298,7 +298,7 @@ Standard kalibrering för S-metern är enligt följande skala:
 
 \subsubsection{Bandbredd olika modulationer}
 
-Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå när man ställer in sin radiostation. Detta gäller särskilt att beakta i närheten av nödfrekvenser eller bandkanten. När vi talar om bandbredder här förstås den bandbredd vari minst 98 \% av signalens effekt befinner sig.
+Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå när man ställer in sin radiostation. Detta gäller särskilt att beakta i närheten av nödfrekvenser eller bandkanten. När vi talar om bandbredder här förstås den bandbredd vari minst 98\% av signalens effekt befinner sig.
 
 \begin{tabular}{lrl}
 	\textbf{Modulation} & \textbf{Bandbredd} & \textbf{Kommentarer}                  \\ \hline
@@ -310,13 +310,13 @@ Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
 	WFM                 &          16-75 kHz & Bredbandig FM (t.ex. rundradio)
 \end{tabular}
 
-*) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$ kHz. För LSB blir det $f-3$ kHz. Detta innebär att om du sänder på 80m bandet och du får sända telefoni från 3600--3800 kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603 kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605 kHz i stället.
+*) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända telefoni från 3600--3800\,kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605,kHz i stället.
 
 Det är vanligt att man märker stationer som kör överdriven bandbredd. Antingen som en följd av att man vill öka sin modulationsvinst, okunskap eller man har skruvat i sin radio. Syftet kan var att få bättre genomslag vid långväga förbindelser.
 
 \subsubsection{Telegrafi, CW}
 
-CW står för continuous waves och innebär en rent omodulerad bärvåg. I mottagaren används en oscillator för att återskapa hörbar signal. Detta används för telegrafi och modulationsslaget är oftast A1A. Ibland sänds telegrafi som modulerad AM-bärvåg också som då moduleras med t.ex. 440 Hz ton. Det är dock mindre vanligt. 
+CW står för continuous waves och innebär en rent omodulerad bärvåg. I mottagaren används en oscillator för att återskapa hörbar signal. Detta används för telegrafi och modulationsslaget är oftast A1A. Ibland sänds telegrafi som modulerad AM-bärvåg också som då moduleras med t.ex. 700\,Hz ton. Det är dock mindre vanligt.
 
 Bandbredden för CW är i teorin mycket smal. I praktiken blir den lite beroende på frekvens från några Hz till något hundratal Hz beroende på frekvensband och sändarens beskaffenhet i form av jitter och frekvensstabilitet.
 
@@ -326,7 +326,7 @@ Bandbredden hos CW består av fasbruset vilket normalt är så undertryckt att d
 
 Amplitudmodulering finns i flera olika varianter. Vanlig AM består av en bärvåg vars styra varieras i takt med signalen som skall sändas. Denna förändring av bärvågen producerar sidband och det är i dessa som den egentliga informationen återfinns. Bärvågen i sig får dock lejonparten av signalen varför det är en sändningsklass som nästan aldrig används inom amatörradiobanden.
 
-Bandbredden hos AM-modulerad signal kan beräknas genom att man tar två gånger högsta modulationsfrekvensen. Detta ger t.ex. vid en modulationsfrekvens som går från 300-3000 Hz en bandbredd som varierar med talet från 600 Hz -- 6 kHz.
+Bandbredden hos AM-modulerad signal kan beräknas genom att man tar två gånger högsta modulationsfrekvensen. Detta ger t.ex. vid en modulationsfrekvens som går från 300-3000\,Hz en bandbredd som varierar med talet från 600 Hz -- 6 kHz.
 
 $$B=2f_m$$
 
@@ -350,13 +350,13 @@ Där $f_m$ är högsta modulationsfrekvensen.
 
 Frekvensmodulering består av att man tar en bärvåg och modulerar den med talet genom att skifta dess frekvens. Om skiftet i frekvens är mycket litet kallas moduleringen för fasmodulation. FM-modulering indelas i lite olika klasser beroende på hur stor deviation som används. På amatörradions VHF- och UHF-band talar vi om FM och NFM (Narrow FM, andra namn förekommer också). Ibland talar man om bred FM, normal FM och smal FM på svenska.
 
-Normal FM innebär att deviationen (hur mycket signalen avviker från grundfrekvensen) är lika stor som den högsta modulationsfrekvensen. Det är vanligt att kommunikationsradio använder sig av 3 kHz som högsta modulationsfrekvens och 5 kHz deviation. Deviationen är då något bredare och ger upphov till en viss modulationsvinst. När man talar om FM-radio på UKV-bandet för rundradio så är deviationen ca 75 kHz och högsta modulationsfrekvens ca 16 kHz. Där är alltså svinget betydligt bredare än modulationen och detta är bred FM.
+Normal FM innebär att deviationen (hur mycket signalen avviker från grundfrekvensen) är lika stor som den högsta modulationsfrekvensen. Det är vanligt att kommunikationsradio använder sig av 3 kHz som högsta modulationsfrekvens och 5 kHz deviation. Deviationen är då något bredare och ger upphov till en viss modulationsvinst. När man talar om FM-radio på UKV-bandet för rundradio så är deviationen ca 75\,kHz och högsta modulationsfrekvens ca 16\,kHz. Där är alltså svinget betydligt bredare än modulationen och detta är bred FM.
 
-Nu för tiden förordas en minskning av bandbredden för FM-sändningar på amatörbanden, främst är det väl VHF och UHF där FM-sändning är vanligast förekommande och där vill man ha en kanalindelning om 12.5 kHz i stället för som tidigare 25 kHz. Om man studerar bandbredden hos olika FM-signaler kan man använda sig av Carsons bandbreddsbegrepp:
+Nu för tiden förordas en minskning av bandbredden för FM-sändningar på amatörbanden, främst är det väl VHF och UHF där FM-sändning är vanligast förekommande och där vill man ha en kanalindelning om 12,5\,kHz i stället för som tidigare 25\,kHz. Om man studerar bandbredden hos olika FM-signaler kan man använda sig av Carsons bandbreddsbegrepp:
 
 $$B=2(f_M+f_D)$$
 
-Där $B$ är bandbredden $f_M$ högsta modulationsfrekvensen och $f_d$ är FM-signalens maximala deviation (även kallat sving). Carsons bandbreddsbegrepp säger att 98\% av energin förekommer inom den stipulerade bandbredden. Det betyder att att grannkanalen kan få ungefär 17 dB lägre signal under sändning vilket fortfarande inte är enormt bra. Carson var för övrigt den som faktiskt uppfan SSB-modulationen.
+Där $B$ är bandbredden $f_M$ högsta modulationsfrekvensen och $f_d$ är FM-signalens maximala deviation (även kallat sving). Carsons bandbreddsbegrepp säger att 98\% av energin förekommer inom den stipulerade bandbredden. Det betyder att att grannkanalen kan få ungefär 17\,dB lägre signal under sändning vilket fortfarande inte är enormt bra. Carson var för övrigt den som faktiskt uppfan SSB-modulationen.
 
 \begin{center}
 \begin{tabular}{rrrr}
@@ -365,8 +365,6 @@ Deviation & Modulation & Bandbredd & Kanaldelning\\ \hline
 2.5 kHz & 3 kHz & 11 kHz & 12.5 kHz\\
 \end{tabular}
 \end{center}
-
-
 
 \subsection{Termiska brusgolvet}
 
@@ -397,7 +395,7 @@ Return loss och VSWR anger samma sak. VSWR är vanligare inom amatörradio medan
 	          7 &          2,61 &       19,95 &          18 &          1,29 &        1,58 &          30 &          1,07 &        0,10
 \end{longtable}
 
-Acceptabelt RL är ungefär från 14 dB, riktigt bra från 20 dB och de bästa komponenterna ligger runt 30 dB. Många antenntuners som går med automatik startar avstämningen först när VSWR är 1:2 eller sämre som motsvarar ca 10 dB RL.
+Acceptabelt RL är ungefär från 12\,dB, riktigt bra från 20 dB och de bästa komponenterna ligger runt 30\,dB. Många antenntuners som går med automatik startar avstämningen först när VSWR är 1:2 eller sämre som motsvarar ca 10\,dB\,RL.
 
 \subsection{CTCSS subtoner}
 
@@ -431,6 +429,8 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 6      &      114.8      &      118,8      &      94.8       &      131.8      \\
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
 \end{tabular}
+
+För handburna enheter och kommunikation på simplex kan man använda 88,5\,Hz som en standard. Slå gärna på det på sändarna direkt, det har ingen betydelse om mottagaren har ``öppen mottagare'' men det gör det möjligt att slippa en del brus.
 
 \section{Övergripande frekvensplan}
 
@@ -496,7 +496,7 @@ För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvå
 
 \textbf{Kortvåg} -- God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men samtidigt starkt avhängigt radiokonditionerna. Med ökande frekvens blir jonosfärreflektionen allt flackare vilket resulterar i en alltmer uttalad död zon (skip). Särskilt utmärkande för kortvågen är att den redan med låg effekt ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg, ibland globalt.
 
-\textbf{Mellanvåg} -- Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg på korta avstånd mellan 100--300 km är möjliga även dagtid under perioder med kraftig solaktivitet.
+\textbf{Mellanvåg} -- Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg på korta avstånd mellan 100--300\,km är möjliga även dagtid under perioder med kraftig solaktivitet.
 
 \textbf{Ultrakortvåg (VHF)} -- Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknar, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
 
