--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -125,7 +125,7 @@ I tabellen listas de kanaler som gäller i svenska farvatten. Andra länder kan 
 
 Anropskanal och nödkanal är kanal 16.
 
-Vid duplextrafik är skiftet -4,6 MHz.
+Vid duplextrafik är skiftet -4,6\,MHz.
 
 \subsubsection{Kanalnummer och frekvens maritima kanaler}
 
@@ -167,11 +167,11 @@ L2 & 155,525 &         & F2 & 155,775 & \\
    &         &         & F3 & 155,825 & \\
 \end{longtable}
 
-I tabellen är kanaler som saknar kustfrekvens alltså simplexkanaler. DSC står för ''Digital Selective Call'' ett sätt att digitalt anropa skepp eller kustsI tabellen är kanaler som saknar kustfrekvens alltså simplexkanaler. DSC står för ''Digital Selective Call'' ett sätt att digitalt anropa skepp eller kuststationer, kanaler vikta för DSC får inte användas för vanliga samtal.
+I tabellen är de kanaler som saknar kustfrekvens alltså simplexkanaler. DSC står för ''Digital Selective Call'' ett sätt att digitalt anropa skepp eller kustsI tabellen är kanaler som saknar kustfrekvens alltså simplexkanaler. DSC står för ''Digital Selective Call'' ett sätt att digitalt anropa skepp eller kuststationer, kanaler vikta för DSC får inte användas för vanliga samtal.
 
 Kanal 16 är anropsfrekvens om man inte vet motstationen passar en annan kanal. Den är också nödfrekvens eftersom den passas av de flesta. 
 
-Kanalerna L1 osv är frekvenser avsedda för fritidsbåtar (Leisure) och frekvenserna F1 osv är avsedda för yrkesfiske.
+Kanalerna L1--L2 är frekvenser avsedda för fritidsbåtar (Leisure) och frekvenserna F1--F3 osv är avsedda för yrkesfiske.
 
 \subsubsection{Transponderkanaler}
 \begin{longtable}{rrl}
@@ -180,8 +180,6 @@ Kanalerna L1 osv är frekvenser avsedda för fritidsbåtar (Leisure) och frekven
 AIS1 & 161,975 & Digital trafik, transponder\\
 AIS2 & 162,025 & Digital trafik, transponder\\
 \end{longtable}
-
-
 
 \subsubsection{Stockholm radio}
 
@@ -213,58 +211,61 @@ Karlshamn      & 25 & 48 & Kivik         & 21 & 39\\
 \textbf{Västkusten}
 
 \begin{longtable}{lrr|lrr}
-\textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} & \textbf{Kuststation} & \textbf{Kanal}& \textbf{Horisont}\\
+\textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} & \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} \\
 \hline
 \endhead
-Strömstad & 22 & 25 & Grebbestad & 26 & 25 \\
-Kungshamn & 23 & 23 & Uddevalla & 84 & 47 \\
-Tjörn & 81 & 26 & Göteborg & 24 & 43 \\
-Grimeton & 22 & 35 & Halmstad & 62 & 52 \\
-Helsingborg & 24 & 28 & Malmö & 27 & 25 \\
+
+Strömstad   & 22 & 25 & Grebbestad & 26 & 25 \\
+Kungshamn   & 23 & 23 & Uddevalla  & 84 & 47 \\
+Tjörn       & 81 & 26 & Göteborg   & 24 & 43 \\
+Grimeton    & 22 & 35 & Halmstad   & 62 & 52 \\
+Helsingborg & 24 & 28 & Malmö      & 27 & 25 \\
 \end{longtable}
 
 \textbf{Insjöarna}
 
 \begin{longtable}{lrr|lrr}
-\textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} & \textbf{Kuststation} & \textbf{Kanal}& \textbf{Horisont}\\
+\textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} & \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} \\
 \hline
 \endhead
-Västerås & 25 & 40 & Trollhättan & 25 & 32 \\
-Bäckefors & 78 & 50 & Kinnekulle & 01 & 43 \\
-Karlstad & 65 & 36 & Jönköping & 23 & 49 \\
-Motala & 26 & 47 & & & \\
+
+Västerås  & 25 & 40 & Trollhättan & 25 & 32 \\
+Bäckefors & 78 & 50 & Kinnekulle  & 01 & 43 \\
+Karlstad  & 65 & 36 & Jönköping   & 23 & 49 \\
+Motala    & 26 & 47 &             &    &    \\
 \end{longtable}
 
 \subsection{Frekvenser amatörradio VHF--UHF}
 
-I denna skrift försöker vi omfatta alla VHF och UHF-band vilket inkluderar 6m-bandet, 2m-bandet, 70cm-bandet och 23cm-bandet.
+I denna skrift försöker vi omfatta alla VHF och UHF-band vilket inkluderar 6\,m-bandet, 2\,m-bandet, 70\,cm-bandet och 23\,cm-bandet.
 
 \subsubsection{Kanalnumrering VHF/UHF}
 
-Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6m, 2m och 70cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6m, V--2m, U--70cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för
+Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6\,m, 2\,m och 70\,cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6\,m, V--2\,m, U--70\,cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för
 att ange kanal.
 
 Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
 
 \begin{tabular}{crrll}
 	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
-	     6 m      & 51.000 MHz             & 10.0 kHz             & F00                   & $f=51+k\cdot0.01$    \\
-                      &                        &                      &                       & $k=(f-51)/0,01$      \\ \hline
-	     2 m      & 145.000 MHz            & 12.5 kHz             & V00                   & $f=145+k\cdot0.0125$ \\
-                      &                        &                      &                       & $k=(f-145)/0,0125$   \\ \hline
-	    70 cm     & 430.000 MHz            & 12.5 kHz             & U000                  & $f=430+k\cdot0.0125$ \\
-                      &                        &                      &                       & $k=(f-430)/0,0125$   \\ \hline
+
+6\,m   & 51.000\,MHz  & 10.0\,kHz & F00  & $f=51+k\cdot0.01$    \\
+      &             &          &      & $k=(f-51)/0,01$      \\ \hline
+2\,m   & 145.000\,MHz & 12.5\,kHz & V00  & $f=145+k\cdot0.0125$ \\
+      &             &          &      & $k=(f-145)/0,0125$   \\ \hline
+70\,cm & 430.000\,MHz & 12.5\,kHz & U000 & $f=430+k\cdot0.0125$ \\
+      &             &          &      & $k=(f-430)/0,0125$   \\ \hline
 \end{tabular}
 
 Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det kanaler i numreringen som inte är tillåtna på vissa ställen. Det är därför viktig att kontrollera att man fortfarande följer bandplanerna i den region man är.
 
 \begin{itemize}
-\item I 6 m bandet finns inga FM-kanaler definierade under 51 MHz.
-\item För 2m-bandet är FM-kanaler endast definierade från 145 MHz och uppåt.
-\item I 70 cm-bandet är inga kanaler definierade i intervallet 432.000--433.000 MHz. Observera att startfrekvensen är utanför 70cm bandplanen i IARU region 1.
+\item I 6\,m bandet finns inga FM-kanaler definierade under 51\,MHz.
+\item För 2\,m-bandet är FM-kanaler endast definierade från 145\,MHz och uppåt.
+\item I 70\,cm-bandet är inga kanaler definierade i intervallet 432.000--433.000\,MHz. Observera att startfrekvensen är utanför 70\,cm bandplanen i IARU region 1.
 \end{itemize}
 
-OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt information.
+OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt information.
 
 \clearpage
 \subsubsection{FM-kanaler 6m-bandet}
@@ -333,7 +334,7 @@ OBS!\\ Information om kanalnumreringen för 23cm-bandet tas tacksamt mot. Maila 
          &     &              & 145,7875 & RV63 & R7X
 \end{longtable}
 
-X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5~kHz kanaldelning för repeatrar. Först senare övergick man även till samma kanaldelning på övriga FM-kanaler. De gamla simplexkanalerna hade inte så stor spridning i Sverige men förekom rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller aktivitetscenter som det numera kallas).
+X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5\,kHz kanaldelning för repeatrar. Först senare övergick man även till samma kanaldelning på övriga FM-kanaler. De gamla simplexkanalerna hade inte så stor spridning i Sverige men förekom rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller aktivitetscenter som det numera kallas).
 
 \clearpage
 \subsubsection{FM-kanaler 70cm-bandet}
@@ -395,7 +396,7 @@ X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5~kHz 
 
 \end{longtable}
 
-RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$~MHz och $144,025 \cdot 3 = 432,075$~MHz varför man till och med hade bredare kanalraster de-facto.
+RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$\,MHz och $144,025 \cdot 3 = 432,075$\,MHz varför man till och med hade bredare kanalraster de-facto.
 
 \clearpage
 
