--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -418,8 +418,7 @@ tillfälliga signaler eller vara second operator åt med någon klubbsignal.
 
 Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år. Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar på söndagseftermiddagen.
 
-Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en
-viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
+Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
 
 \input{repeatrar-vhf.tex}
 
