Fixade enheter i 40m bandplan

--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -3,19 +3,19 @@
 \subsection{Bandplaner LF/MF/HF}
 Alla frekvenser i kHz, bandbredder i Hz.
 
-\subsubsection{Bandplan 2.2 km, 135,7--137,8}
+\subsubsection{Bandplan 2.2\,km, 135,7--137,8\,kHz}
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 600 m, 472--479 kHz}
+\subsubsection{Bandplan 600\,m, 472--479\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 160 m, 1810--2000 kHz}
+\subsubsection{Bandplan 160\,m, 1810--2000\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 1 810 & 1 838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
@@ -26,7 +26,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 1 950 & 2 000 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 80 m, 3500--3800 kHz}
+\subsubsection{Bandplan 80\,m, 3500--3800\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 3 500 & 3 510 & 200  & CW             & Exklusivt CW                         \\ 
@@ -45,27 +45,27 @@ Alla frekvenser i kHz, bandbredder i Hz.
 3 775 & 3 800 & 2700 & Alla moder     & Interkontinental DX-trafik prioritet \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 40 m, 7000--7200 kHz}
+\subsubsection{Bandplan 40\,m, 7000--7200\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-7 000 & 7 040 & 200  & CW         & Exklusivt CW.                             \\
-      &       &      &            & QRP aktivitetscentrum 7 030 kHz           \\ \hline
-7 040 & 7 050 & 500  & Smalband   & Digimoder Automatiska inom 7 047–-050 kHz \\ \hline
-7 050 & 7 060 & 2700 & Alla moder & Digimoder Automatiska inom 7 050–-053 kHz \\ \hline
-7 060 & 7 100 & 2700 & Alla moder & SSB contest i segmentet                   \\
-      &       &      &            & DV 7 070 kHz, SSB QRP 7 090 kHz           \\ \hline
-7 100 & 7 130 & 2700 & Alla moder & Region 1 nödfrekvens 7 110 kHz            \\ \hline
-7 130 & 7 200 & 2700 & Alla moder & SSB contest i segmentet                   \\
-      &       &      &            & Image 7 165 kHz                           \\ \hline
-7 175 & 7 200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
+7\,000 & 7\,040 & 200  & CW         & Exklusivt CW.                             \\
+      &       &      &            & QRP aktivitetscentrum 7\,030\,kHz           \\ \hline
+7\,040 & 7\,050 & 500  & Smalband   & Digimoder Automatiska inom 7\,047–-050\,kHz \\ \hline
+7\,050 & 7\,060 & 2700 & Alla moder & Digimoder Automatiska inom 7\,050–-053\,kHz \\ \hline
+7\,060 & 7\,100 & 2700 & Alla moder & SSB contest i segmentet                   \\
+      &       &      &            & DV 7 070 kHz, SSB QRP 7\,090 kHz           \\ \hline
+7\,100 & 7\,130 & 2700 & Alla moder & Region 1 nödfrekvens 7\,110 kHz            \\ \hline
+7\,130 & 7\,200 & 2700 & Alla moder & SSB contest i segmentet                   \\
+      &       &      &            & Image 7\,165\,kHz                           \\ \hline
+7\,175 & 7\,200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
 
 \subsubsection{Bandplan 30 m, 10100--10150 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-10 100 & 10 140 & 200 & CW       & CW exkl. Max 150 Watt på 30 meter    \\
-       &        &     &          & CW QRP 10116 kHz                     \\ \hline
-10 140 & 10 150 & 500 & Smalband & Digimoder PSK 10142.150 kHzEj Packet \\ \hline
+10\,100 & 10\,140 & 200 & CW       & CW exkl. Max 150 Watt på 30 m    \\
+       &        &     &          & CW QRP 10\,116\,kHz                     \\ \hline
+10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
 \end{tabular}
 
 \subsubsection{Bandplan 20 m, 14000--14350 kHz}
