Fixade enheter 20m-bandet

--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -71,16 +71,16 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \subsubsection{Bandplan 20 m, 14000--14350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-14 000 & 14 070 & 200  & CW         & Exklusivt CW                            \\
-       &        &      &            & Contest 14 000-–060                     \\
-       &        &      &            & CW QRS 14 055, CW QRP 14 060            \\ \hline
-14 070 & 14 099 & 500  & Smalband   & PSK 14 070,150                          \\
+14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                            \\
+       &        &      &            & Conctest 14\,000-–060                     \\
+       &        &      &            & CW QRS 14 055, CW QRP 14\,060            \\ \hline
+14\,070 & 14\,099 & 500  & Smalband   & PSK 14 070,150                          \\
        &        &      &            & Auto Digimoder 14 089-–099              \\ \hline
-14 099 & 14 101 & 200  & Fyrar      & Exklusivt IBP, endast fyrar             \\ \hline
-14 101 & 14 112 & 2700 & Alla moder & Digitala moder och obevakade Digimoder  \\ \hline
-14 112 & 14 350 & 2700 & Alla moder & SSB Contest 14 125--300                 \\
-       &        &      &            & DV 14 130, DXpedition prio 14 195$\pm$5 \\ \hline
-14 300 & 14 350 & 2700 & Alla moder & Image 14 230, SSB QRP 14 285            \\
+14\,099 & 14\,101 & 200  & Fyrar      & Exklusivt IBP, endast fyrar             \\ \hline
+14\,101 & 14 \,12 & 2700 & Alla moder & Digitala moder och obevakade Digimoder  \\ \hline
+14\,112 & 14\,350 & 2700 & Alla moder & SSB Contest 14 125--300                 \\
+       &        &      &            & DV 14 130, DXpedition prio 14\,195$\pm$5 \\ \hline
+14\,300 & 14\,350 & 2700 & Alla moder & Image 14\,230, SSB QRP 14\,285            \\
        &        &      &            & Global nödfrekvens 14 300               \\ \hline
 \end{tabular}
 
