Fixade enheter och siffror i rubriker

--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -60,7 +60,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 7175 & 7200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 30 m, 10100--10150 kHz}
+\subsubsection{Bandplan 30 m, 10\,100--10\,150 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 10\,100 & 10\,140 & 200 & CW       & CW exkl. Max 150 Watt på 30 m           \\
@@ -68,7 +68,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 20 m, 14000--14350 kHz}
+\subsubsection{Bandplan 20 m, 14\,000--14\,350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                             \\
@@ -84,7 +84,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekvens 14 300                \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 17 m, 18068--18168 kHz}
+\subsubsection{Bandplan 17 m, 18\,068--18\,168 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -97,7 +97,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 18\,160              \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 15 m, 21000--21450 kHz}
+\subsubsection{Bandplan 15 m, 21\,000--21\,450 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -111,7 +111,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 21\,360                            \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 12 m, 24890--24990 kHz}
+\subsubsection{Bandplan 12 m, 24\,890--24\,990 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 24\,890 & 24\,915 & 200  & CW         & Exklusivt CW, QRP 24\,906                             \\ \hline
@@ -121,7 +121,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & SSB QRP 24\,950, DV 24,960                            \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 10 m, 28000-29700 kHz}
+\subsubsection{Bandplan 10 m, 28\,000-29\,700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 28\,000 & 28\,070 & 200  & CW         & Exklusivt CW, QRS 28\,055, CW QRP 28\,060              \\ \hline
